--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,10 @@ jetbrainsKotlinJvm = "2.0.0"
 injectJavax = "1"
 appcompat = "1.7.0"
 material = "1.12.0"
+coroutines = "1.8.1"
+room = "2.6.1"
+
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,6 +49,8 @@ retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-
 okthttp3 = { module ="com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okthttp3-interceptor = { module ="com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
+
 
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
@@ -55,6 +61,12 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 coil-compose = {module = "io.coil-kt:coil-compose", version.ref = "coil"}
 
 kotlin-serialization = { group = "org.jetbrains.kotlinx", name= "kotlinx-serialization-json", version.ref = "kotlinSerialize" }
+
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines"}
+
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 
 mockito-kotlin = { group = "org.mockito.kotlin", name= "mockito-kotlin", version.ref = "mockitoKotlin" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
